# rustgpt

./: Cargo.toml  README.md
src/: chatgpt.rs  main copy.rs  main.rs
