[package]
name = "rgpt"
version = "0.1.0"
authors = ["Ryan Brown <ryan@mimetics.io>"]
license = "MIT"
description = "A rust ChatGPT-3 CLI tool"
readme = "README.md"
homepage = "https://github.com/ballon3/rustgpt"
repository = "https://github.com/ballon3/rustgpt"
keywords = ["cli", "ai", "chatgpt", "openai"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }

