[package]
name = "rgpt"
version = "0.1.0"
authors = ["Ryan Brown <ryan@mimetics.io>"]
edition = "2021" # Set the edition to 2021
license = "MIT"
description = "A rust ChatGPT-3 CLI tool"
readme = "README.md"
keywords = ["cli", "ai", "chatgpt", "openai"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
